<resources>
    <string name="app_name">QRienteering Station</string>

    <!-- Menu item strings -->
    <string name="action_download_mode">Download mode</string>
    <string name="action_register_mode">Register mode</string>
    <string name="action_mass_start_mode">Mass start mode</string>
    <string name="action_settings">Change settings</string>
    <string name="action_get_logs">Get event logs</string>

    <!-- Default text box values -->
    <string name="default_event_name">No event chosen</string>
    <string name="default_mode">Download mode</string>
    <string name="default_version">No version found</string>

    <!-- Strings used for fragments for navigation -->
    <string name="event_chooser_fragment_label">QRienteering Event Chooser</string>
    <string name="results_fragment_label">QRienteering Event Manager</string>
    <string name="mass_start_fragment_label">QRienteering Mass Start Courses</string>
    <string name="offline_fragment_label">QRienteering Offline Mode</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="event_chooser_fragment_info">Event Chooser</string>
    <string name="results_fragment_info">Event Management Page</string>
    <string name="start_up">Initializing</string>
    <string name="version_text">Version: </string>


    <!-- Preference Titles -->
    <string name="general_settings">General</string>

    <!-- General settings Preferences -->
    <string name="settings_url">Site URL</string>
    <string name="settings_key">Site access key</string>
    <string name="settings_site_timeout">Site access timeout</string>
    <string name="default_invalid_url">No URL set</string>
    <string name="default_invalid_key">No_key</string>
    <string name="enable_simulation_mode">Enable simulation mode</string>
    <string name="enable_verbose_si_readout">Print verbose SI unit readout</string>
    <string name="always_allow_offline_mode">Always show offline option</string>
    <string name="auto_choose_if_one_event">Automatically choose single event</string>


    <!-- For the individual entries in the finisher / register view -->
    <string name="no_such_member">No such member</string>
    <string name="course">Course</string>
    <string name="contact">Emergency contact number</string>
    <string name="name">Name</string>
    <string name="download">Retry download</string>
    <string name="register">Register</string>
    <string name="close_entry">Close notification</string>

    <!-- To move forward to event management -->
    <string name="run_chosen_event">Use chosen event</string>
    <string name="set_url_and_key_error">URL and access key must be set before using this app</string>
    <string name="run_offline_button">Run in offline mode</string>


    <!-- In the results fragment, to go to Mass Start -->
    <string name="results_mass_start_button_label">Mass Start</string>

    <!-- For log file management -->
    <string name="show_logs">Show log files</string>
    <string name="email_logs">Email chosen log(s)</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For the mass start fragment -->
    <string name="mass_start_label">Mass Start Courses</string>
    <string name="mass_start_await_si_time">Awaiting SI unit insertion with starting timestamp</string>
    <string name="mass_start_use_current_time">Use current time</string>
    <string name="mass_start_choices">Course(s) for a mass start</string>
    <string name="mass_start_button_label">Mass start</string>

    <!-- For the offline fragment -->
    <string name="offline_title">Offline Results</string>
</resources>