<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">

        <EditTextPreference
            android:defaultValue="http://www.mkoconnell.com/"
            android:key="@string/settings_url"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_url" />
        <EditTextPreference
            android:defaultValue="NEOC_Test"
            android:key="@string/settings_key"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_key" />
        <EditTextPreference
            android:defaultValue="10"
            android:key="@string/settings_site_timeout"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_site_timeout" />

    </PreferenceCategory>

</PreferenceScreen>