<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/EventChooserFragment">

    <fragment
        android:id="@+id/EventChooserFragment"
        android:name="com.example.playgroundtwo.EventChooserFragment"
        android:label="@string/event_chooser_fragment_label"
        tools:layout="@layout/event_chooser_fragment">

        <action
            android:id="@+id/action_EventChooserFragment_to_ResultsFragment"
            app:destination="@id/ResultsFragment" />
        <action
            android:id="@+id/action_EventChooserFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ResultsFragment"
        android:name="com.example.playgroundtwo.ResultsFragment"
        android:label="@string/results_fragment_label"
        tools:layout="@layout/results_fragment">

        <action
            android:id="@+id/actionResultsFragment_to_EventChooserFragment"
            app:destination="@id/EventChooserFragment" />
        <action
            android:id="@+id/action_ResultsFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_ResultsFragment_to_massStartFragment"
            app:destination="@id/massStartFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.playgroundtwo.SettingsFragment"
        android:label="SettingsFragment">
        <action
            android:id="@+id/action_settingsFragment_to_EventChooserFragment"
            app:destination="@id/EventChooserFragment" />
    </fragment>
    <fragment
        android:id="@+id/massStartFragment"
        android:name="com.example.playgroundtwo.MassStartFragment"
        android:label="@string/mass_start_fragment_label"
        tools:layout="@layout/mass_start_fragment">
        <action
            android:id="@+id/action_massStartFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
</navigation>